@@ -145,7 +145,10 @@ message to \code{sys.stderr}).
 \begin{funcdesc}{warn}{message\optional{, category\optional{, stacklevel}}}
 Issue a warning, or maybe ignore it or raise an exception.  The
 \var{category} argument, if given, must be a warning category class
-(see above); it defaults to \exception{UserWarning}.  This function
+(see above); it defaults to \exception{UserWarning}.  Alternatively
+\var{message} can be a \exception{Warning} instance, in which case
+\var{category} will be ignore and \code{message.__class__} will be used.
+In this case the message text will be \code{str(message)}. This function
 raises an exception if the particular warning issued is changed
 into an error by the warnings filter see above.  The \var{stacklevel}
 argument can be used by wrapper functions written in Python, like
@@ -169,6 +172,9 @@ filename and line number, and optionally the module name and the
 registry (which should be the \code{__warningregistry__} dictionary of
 the module).  The module name defaults to the filename with \code{.py}
 stripped; if no registry is passed, the warning is never suppressed.
+\var{message} must be a string and \var{category} a subclass of
+\exception{Warning} or \var{message} may be a \exception{Warning} instance,
+in which case \var{category} will be ignored.
 \end{funcdesc}
 
 \begin{funcdesc}{showwarning}{message, category, filename,
